[tool.poetry]
name = "langchain_poe"
version = "0.0.13"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
fastapi_poe = "*"
langchain = ">=0.0.188"
openai = "*"
certifi = "*"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
