[tool.poetry]
name = "poe-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poe_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi_poe = "*"
langchain = "*"
openai = "*"
certifi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
